<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".MovieDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <ImageButton
            android:id="@+id/ibtBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/ic_baseline_arrow_back"
            android:contentDescription="@string/back"/>

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/radius_botton_100"
            android:contentDescription="@string/movie_poster"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:elevation="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/relativeLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/radius_left_100"
                android:padding="8sp">

                <ImageView
                    android:id="@+id/ivStar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star"
                    android:padding="8sp"
                    android:src="@drawable/ic_star_percent_32"
                    app:layout_constraintBottom_toBottomOf="@+id/tv2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv1" />

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="72sp"
                    android:layout_height="wrap_content"
                    android:text="@string/value_not_found"
                    android:textAppearance="@style/TextDefault"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivStar"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv2"
                    android:layout_width="72sp"
                    android:layout_height="wrap_content"
                    android:alpha="0.5"
                    android:text="@string/user_avaliation"
                    android:textAppearance="@style/TextDefault"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ivStar"
                    app:layout_constraintTop_toBottomOf="@+id/tv1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="320sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/value_not_found"
                android:textAppearance="@style/TextTitle" />

            <ToggleButton
                android:id="@+id/favBtn"
                style="@style/toggleButton"
                android:layout_width="32sp"
                android:layout_height="32sp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_heart_bg_32"
                android:checked="false" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>