<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="260sp"
        android:layout_height="wrap_content"
        android:elevation="8dp"
        card_view:cardCornerRadius="48dp">

        <ImageView
            android:id="@+id/ivMoviePoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/movie_poster"
            android:clickable="true" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="16sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMovieTitle"
                android:layout_width="160sp"
                android:layout_height="wrap_content"
                android:text="@string/value_not_found"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAppearance="@style/TextTitle" />

            <ToggleButton
                android:id="@+id/favBtn"
                android:layout_width="24sp"
                android:layout_height="24sp"
                android:layout_marginStart="10dp"
                style="@style/toggleButton"
                android:background="@drawable/ic_heart_bg"
                android:checked="false"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivStar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/star"
                card_view:srcCompat="@drawable/ic_star_percent" />

            <TextView
                android:id="@+id/tvMoviePercent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value_not_found"
                android:textAppearance="@style/TextDefault"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>